# naukma_ml_hw4

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  hw3.ipynb  hw4.ipynb  inference_script.py  preprocessing.py  pyproject.toml  requirements.txt
.github/workflows/: .python-package.yml
EDA/: hw3.ipynb  hw4.ipynb
checkpoints/: .gitignore  logistic_regression_classifier_model.joblib  random_forest_classifier_model.joblib  tfidf_vectorizer.joblib
docker/: Dockerfile
src/: download_model.py  inference_script.py  preprocessing.py  train.py
tests/: conftest.py
tests/code/: test_data.py  test_preprocessing.py
tests/data/: conftest.py  test_dataset.py
tests/fixtures/: sample_data_test.csv
tests/model/: conftest.py  test_behavioral.py
