[tool.poetry]
name = "naukma-ml-hw4"
version = "0.1.0"
description = ""
authors = ["Vadym Nakytniak", "Yurii Polishchuk"]
readme = "README.md"

[tool.poe.tasks]
test = "pytest --cov --cov-fail-under=40"
lint = "ruff --fix"
format = "ruff format"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
ipython = "^8.18.1"
nltk = "^3.8.1"
joblib = "^1.3.2"
num2words = "^0.5.13"
click = "^8.1.7"
tqdm = "^4.66.1"
pandarallel = "^1.6.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
ipywidgets = "^8.1.1"
jupyterlab = "^4.0.9"
umap-learn = "^0.5.5"
ruff = "^0.1.7"
pytest = "^7.4.3"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
poethepoet = "^0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

### Tooling

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = "src"

# Ruff
[tool.ruff]
# Enable the isort rules.
extend-select = ["I"]